# batlab

./: .gitignore  ARCHITECTURE.md  Cargo.toml  GRAPHING.md  MIGRATION.md  Makefile  README.md  REPORTS.md  SPEC.md  batlab  batlab.sh  test_platform_compile.sh
data/: .gitkeep  2025-09-12T05:43:15Z_gramr_Linux_debian-default.jsonl  2025-09-12T05:43:15Z_gramr_Linux_debian-default.meta.json  2025-09-12T18:08:36Z_gramr_Linux_linux-lenovo-thinkpad-x1-carbon-gen-9.jsonl  2025-09-12T18:08:36Z_gramr_Linux_linux-lenovo-thinkpad-x1-carbon-gen-9.meta.json  2025-09-13T21:17:14Z_gramr_FreeBSD_freebsd-11th-gen-intel-r-core-tm-i7-1185g7-3-00ghz.meta.json  2025-09-13T21:17:14Z_powerd_gramr_FreeBSD_freebsd-11th-gen-intel-r-core-tm-i7-1185g7-3-00ghz.meta.json  2025-09-13T21:17:14Z_powrd_gramr_FreeBSD_freebsd-11th-gen-intel-r-core-tm-i7-1185g7-3-00ghz.jsonl  2025-09-14T08:13:34Z_gramr_FreeBSD_freebsd-11th-gen-intel-r-core-tm-i7-1185g7-3-00ghz.meta.json  2025-09-14T08:13:34Z_kde_gramr_FreeBSD_freebsd-11th-gen-intel-r-core-tm-i7-1185g7-3-00ghz.jsonl  2025-09-14T08:13:34Z_kde_gramr_FreeBSD_freebsd-11th-gen-intel-r-core-tm-i7-1185g7-3-00ghz.meta.json  2025-09-20T09:42:26Z_divan-ghostbsd_freebsd_freebsd-divan-ghostbsd.jsonl  2025-09-20T09:42:26Z_divan-ghostbsd_freebsd_freebsd-divan-ghostbsd.meta.json
docs/: .gitkeep  BUILD.md  README.md  index.html
lib/: telemetry.sh
man/: batlab-graph.1  batlab-report.1  batlab.1
proposals/: 001-shell-to-rust-migration.md
scripts/: batlab-report
src/: README.md  analysis.c  batlab.c  freebsd_telemetry.rs  lib.rs  linux_telemetry.rs  main.rs  (+4 more)
(+19 files in other folders)
