[package]
name = "batlab"
version = "0.1.0"
edition = "2021"
description = "Battery Test Harness for FreeBSD vs Linux Research"
license = "BSD-3-Clause"
repository = "https://github.com/divanv/batlab"
authors = ["Divan Visagie <divan@divanv.com>"]
readme = "README.md"
keywords = ["battery", "freebsd", "linux", "power-management", "benchmarking"]
categories = ["command-line-utilities", "science"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
ctrlc = "3.4"
which = "4.4"

# Platform-specific dependencies
[target.'cfg(target_os = "freebsd")'.dependencies]
# FreeBSD-specific crates if needed in the future

[target.'cfg(target_os = "linux")'.dependencies]
# Linux-specific crates if needed in the future

[profile.release]
lto = true              # Link-time optimization for smaller binaries
codegen-units = 1       # Better optimization
panic = "abort"         # Smaller binary size, no unwinding
strip = true            # Remove debug symbols from release builds
opt-level = 3           # Maximum optimization

[profile.dev]
debug = true            # Keep debug info for development
opt-level = 0           # Fast compilation for development

[[bin]]
name = "batlab"
path = "src/main.rs"

[lib]
name = "batlab"
path = "src/lib.rs"
